--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-color": "^2.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
